# fred-deepeval-cli

./: .gitignore  Makefile  README.md  pyproject.toml
config/: .env.template  configuration.yaml
docs/: rag-evaluation-rfc.md  rag-local-setup.md  sql-evaluation.md
fred_deepeval_cli/: classify.py  config_loader.py  deepeval_adapter.py  deepeval_runner.py  eval_client.py  main.py  structural_checks.py  test_helpers.py
scripts/: run_sql_scenarios.py
scripts/makefiles/: python-clean.mk  python-code-quality.mk  python-vars.mk
tests/: sql_scenarios.json  test_classify.py  test_cli_parser.py  test_deepeval_adapter.py  test_deepeval_runner.py  test_eval_client.py  test_main.py  test_run_sql_scenarios.py  test_sql_structural_checks.py  test_structural_checks.py
tests/fixtures/: degraded_node_error.json  execution_error.json  hitl_blocked.json  success_rag.json  success_with_retrieval.json
