[project]
name = "fred-deepeval-cli"
version = "0.1.0"
description = "External CLI for evaluating Fred agent turns via /agents/evaluate"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = []
dependencies = [
  "fred-sdk",
  "fred-runtime",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
  "pytest-socket>=0.7.0",
  "ruff>=0.12.5",
]

[project.scripts]
fred-deepeval-cli = "fred_deepeval_cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_deepeval_cli*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.uv.sources]
fred-sdk = { path = "../fred/libs/fred-sdk", editable = true }
fred-runtime = { path = "../fred/libs/fred-runtime", editable = true }

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
  "pytest-socket>=0.7.0",
  "ruff>=0.12.5",
]
